hyperdb-api-derive/tests/ui/fail/derive_from_row_on_enum.rs
use hyperdb_api_derive::FromRow;

#[derive(FromRow)]
enum Color {
    Red,
    Green,
}

fn main() {}
