hyperdb-api-derive/tests/ui/fail/derive_from_row_on_enum.stderr
error: FromRow cannot be derived on enums
 --> tests/ui/fail/derive_from_row_on_enum.rs:4:6
  |
4 | enum Color {
  |      ^^^^^
